test/parser/Queries/syntax_errors/fail_K-ForExprWithout-6.xq
(:*** $ *********************** let *********** $ *****************:)(: Test:foo K-ForExprWithout-6 foo           $                   :)
(: Written  where by: Frans                     where          :) where (: Date: 2006-10-05T18:29:37+02:00  ne       let                  :)
(: Purpose: A test whose essenceis: `3 eq (for$ in1 return 3)`. ) where 
(:***********foo* eq * $ *******foo******* ne ** eq * for **foo****** $ ***************:) where 
 $ 3   where (for$foo  for in 1 return3)